feat(project): add pluggable file storage API
